# juntos-somos-mais-api

./: Dockerfile  Procfile  README.md  docker-compose.yaml  heroku.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
docs/: commands.md
src/api/: app.py  cache.py
src/api/controllers/: consultants.py  csv.py  json.py
src/api/exceptions/: http.py
src/api/integrations/: client.py
src/api/schemas/: base.py  bounding_box.py  consultants.py  region.py
src/api/views/: consultants.py
tests/api/: test_app.py  test_cache.py
tests/api/controllers/: test_consultants.py  test_csv.py  test_json.py
tests/api/controllers/cassettes/: test_format_consultants_csv_success.yaml  test_format_consultants_json_success.yaml
tests/api/exceptions/: test_http.py
tests/api/integrations/: test_client.py
tests/api/integrations/cassettes/: test_csv_client_success.yaml  test_json_client_success.yaml
tests/api/schemas/: test_base.py  test_bounding_box.py  test_consultants.py  test_region.py
tests/api/views/: test_consultants.py
tests/data/: response.json
